--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href=".resources/css/style" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
-    <h1>Discover hidden places in the world around you</h1>
-    
+    <div id="header">
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
+
+    <h3>Dowload Excursion (Coming soon!)</h3>
+
   </head>
   <body>
 
