Add link to website.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <div id="header">
       <h1>Discover hidden places in the world around you</h1>
     </div>
+    <div class="link">
+    <a class="link" href="https://o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/#">Dowload Excursion (Coming soon!)</a>
+  </div>
+    <video src="./resources/videos/'excursion (1).mp4'" autoplay loop></video>
 
-    <h3>Dowload Excursion (Coming soon!)</h3>
 
   </head>
   <body>
