--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
       <h1>Discover hidden places in the world around you</h1>
     </div>
     <div class="link">
-    <a class="link" href="https://o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/#">Dowload Excursion (Coming soon!)</a>
-  </div>
+      <a href="https://o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Dowload Excursion (Coming soon!)</a>
+    </div>
     <video src="./resources/videos/'excursion (1).mp4'" autoplay loop></video>
+    <p>Your personal travel guide</p>
+    <p>Excursion remembers places you like, and recommends new points of interest around.</p>
+    <img src="./resources/images/camp.jpg">
+    
 
 
   </head>
