Add background color and text style.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
       <h1>Discover hidden places in the world around you</h1>
     </div>
     <div class="link">
-      <a href="https://o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Dowload Excursion (Coming soon!)</a>
+      <a href="https://o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Download Excursion (Coming soon!)</a>
     </div>
     <video src="./resources/videos/'excursion (1).mp4'" autoplay loop></video>
-    <p>Your personal travel guide</p>
+    <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around.</p>
     <img src="./resources/images/camp.jpg">
+    <br /><br />
+    <img src="./resources/images/phone/png">
+    <br />
+    <h2>Coming soon for iPhone and Android</h2>
+    <div class="link">
+      <a href="https://"o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Download Excursion (Coming soon!)</a>
+    </div>
+    <div class="copyright">
+      <p>© Excursion</p>
+    </div>
     
+
 
 
   </head>
