--- a/index.html
+++ b/index.html
@@ -2,30 +2,24 @@
 <html>
   <head>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-    <title>Excursion</title>
-      <h1>Discover hidden places in the world around you</h1>
-    <div class="links">
-      <a href="https://t6om4k1mu2e6efmtv8m140qa42j0k8g06grc0n1k9bfr9p8u99p0.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
-    </div>
-    <video src="./resources/videos/'excursion (1).mp4" autoplay loop></video>
-      <h2>Your personal travel guide</h2>
-      <h3>Excursion remembers places you like, and recommends new points of interest around.</h3>
-    <img src="./resources/images/camp.jpg">
-    <br /><br />
-    <img src="./resources/images/phone.png">
-    <br />
-    <h2>Coming soon for iPhone and Android</h2>
-    <div class="links">
-      <a href="https://"o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Download Excursion (Coming soon!)</a>
-    </div>
-    <div id="copyright"
-      <p>© Excursion</p>
-    </div>
-
-
-
+    <title>Excursion</title
   </head>
-  <body>
-
+    <body>
+      <h1>Discover hidden places in the world around you</h1>
+        <div id="links">
+          <a href="https://t6om4k1mu2e6efmtv8m140qa42j0k8g06grc0n1k9bfr9p8u99p0.codecademy.cloud/#">Download Excursion (Coming soon!)</a>
+        </div>
+      <video src="./resources/videos/excursion.mp4" autoplay loop></video>
+      <h2>Your personal travel guide</h2>
+      <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+      <img src="./resources/images/camp.jpg">
+      <br /><br />
+      <img src="./resources/images/phone.png">
+      <br />
+      <h2>Coming soon for iPhone and Android</h2>
+      <div id="links">
+        <a href="https://"o1ne4hr2b2glnidj47q2l38r4sq5c1c1h6e7ih3jvmjocj83nslg.codecademy.cloud/">Download Excursion (Coming soon!)</a>
+      </div>
+      <p>© Excursion</p>
   </body>
-</html>
+  </html>
